[project]
name = "pyspark-stubs"
readme = "README.md"
description = "Create safer spark pipelines"
requires-python = ">=3.10"
optional-dependencies = { dev = ["pyspark>=3.0.0"] }


authors = [{ name = "Emil Redzik", email = "kontakt@eredzik.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
version = "0.1.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyspark_stubs"]
